Fix horizontal overlap between sections

--- a/style4-2-Main-About-Services.css
+++ b/style4-2-Main-About-Services.css
@@ -11,7 +11,7 @@
 
 /* --- Hide horizontal white space between sections --*/
 section {
-    margin-top: -0.5rem;
+    margin-top: -0.4rem;
 }
 
 .projects h2 {
