--- a/style7-Footer.css
+++ b/style7-Footer.css
@@ -1,7 +1,7 @@
 footer {
     background: var(--footer-bg);
     color: var(--cyan-footer);
-    margin-top: -0.5rem;
+    margin-top: -0.4rem;
     font-family: Barlow;
 }
 
